03-cluster-tools/04.gateway-api/internal-gw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: gateway-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-desec
spec:
  addresses:
    - type: IPAddress
      value: 10.40.0.150
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.akna.one.pl"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      #tls:
      #  mode: Terminate
      #  certificateRefs:
      #    - name: akna-one-pl-tls
